@@ -17,6 +17,8 @@ from Products.CMFTestCase.setup import CMF15
 from Products.CMFTestCase.setup import CMF16
 from Products.CMFTestCase.setup import CMF20
 from Products.CMFTestCase.setup import CMF21
+from Products.CMFTestCase.setup import USELAYER
+from Products.CMFTestCase.setup import Z3INTERFACES
 from Products.CMFTestCase.setup import portal_name
 from Products.CMFTestCase.setup import portal_owner
 from Products.CMFTestCase.setup import default_products
